--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,22 +1,10 @@
 <mat-sidenav-container>
-  <mat-sidenav #sidenav role="navigation"> <p>side nav</p> </mat-sidenav>
-  <mat-sidenav-content>
-    <mat-toolbar color="primary">
-      <div>
-        <button mat-icon-button (click)="sidenav.toggle()">
-          <mat-icon>menu</mat-icon>
-        </button>
-      </div>
-      <div><a routerLink="/">Logo</a></div>
+  <mat-sidenav #sidenav role="navigation">
+    <app-sidenav-list (closeSideNav)="sidenav.toggle()"></app-sidenav-list>
+  </mat-sidenav>
 
-      <div fxFlex fxLayout fxLayoutAlign="flex-end">
-        <ul class="navigation" fxLayout fxLayoutGap="20px">
-          <li><a routerLink="/signup">Signup</a></li>
-          <li><a routerLink="/login">Login</a></li>
-          <li><a routerLink="/training">Training</a></li>
-        </ul>
-      </div>
-    </mat-toolbar>
+  <mat-sidenav-content>
+    <app-header (toggleNav)="sidenav.toggle()"></app-header>
     <main>
       <router-outlet></router-outlet>
     </main>
