+layout for training component,confirmation modal

--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -1,1 +1,29 @@
-<p>welcome works!</p>
+<div
+  class="welcome"
+  fxLayout="column"
+  fxLayout.gt-md="row"
+  fxLayoutGap.gt-md="20px"
+  fxLayoutAlign="center center"
+>
+  <section>
+    <h1>Activity</h1>
+    <p>
+      Lorem Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+      eiusmod tempor
+    </p>
+  </section>
+  <section>
+    <h1>Community</h1>
+    <p>
+      Lorem Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+      eiusmod tempor
+    </p>
+  </section>
+  <section>
+    <h1>Challenges</h1>
+    <p>
+      Lorem Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+      eiusmod tempor
+    </p>
+  </section>
+</div>
