--- a/src/app/training/new-training/new-training.component.html
+++ b/src/app/training/new-training/new-training.component.html
@@ -1,1 +1,21 @@
-<p>new-training works!</p>
+<section class="new-training" fxLayout fxLayoutAlign="center">
+  <mat-card class="example-card" fxFlex="400px" fxFlex.xs="100%">
+    <mat-card-header fxLayoutAlign="center">
+      <mat-card-title>Let's start to workout</mat-card-title>
+    </mat-card-header>
+    <mat-card-content fxLayoutAlign="center">
+      <mat-form-field>
+        <mat-label>Select</mat-label>
+        <mat-select>
+          <mat-option value="one">First option</mat-option>
+          <mat-option value="two">Second option</mat-option>
+        </mat-select>
+      </mat-form-field>
+    </mat-card-content>
+    <mat-card-actions fxLayoutAlign="center">
+      <button mat-raised-button color="accent" (click)="startTraining()">
+        Start
+      </button>
+    </mat-card-actions>
+  </mat-card>
+</section>
