--- a/src/app/training/training.component.html
+++ b/src/app/training/training.component.html
@@ -1,1 +1,11 @@
-<p>training works!</p>
+<mat-tab-group *ngIf="!showCurrentTrainings">
+  <mat-tab label="New Exercise">
+    <app-new-training
+      (trainingStart)="showCurrentTrainings = true"
+    ></app-new-training>
+  </mat-tab>
+  <mat-tab label="Past Exercise">
+    <app-past-training></app-past-training>
+  </mat-tab>
+</mat-tab-group>
+<app-current-training *ngIf="showCurrentTrainings"></app-current-training>
