added auth service

--- a/src/app/navigation/sidenav-list/sidenav-list.component.html
+++ b/src/app/navigation/sidenav-list/sidenav-list.component.html
@@ -12,7 +12,7 @@
     <span class="nav-link">Training</span>
   </a>
   <mat-list-item>
-    <button mat-icon-button (click)="onClose()">
+    <button mat-icon-button (click)="logout()">
       <mat-icon>eject</mat-icon>
       <span class="nav-link">Logout</span>
     </button>
