--- a/src/app/navigation/header/header.component.html
+++ b/src/app/navigation/header/header.component.html
@@ -11,7 +11,7 @@
       <li *ngIf="!isAuth"><a routerLink="/signup">Signup</a></li>
       <li *ngIf="!isAuth"><a routerLink="/login">Login</a></li>
       <li *ngIf="isAuth"><a routerLink="/training">Training</a></li>
-      <li *ngIf="isAuth"><a routerLink="/">Logout</a></li>
+      <li *ngIf="isAuth" (click)="logout()"><a routerLink="/">Logout</a></li>
     </ul>
   </div>
 </mat-toolbar>
