--- a/src/app/training/new-training/new-training.component.html
+++ b/src/app/training/new-training/new-training.component.html
@@ -7,8 +7,9 @@
       <mat-form-field>
         <mat-label>Select</mat-label>
         <mat-select>
-          <mat-option value="one">First option</mat-option>
-          <mat-option value="two">Second option</mat-option>
+          <mat-option *ngFor="let x of exercises" value="{{ x.id }}">{{
+            x.name
+          }}</mat-option>
         </mat-select>
       </mat-form-field>
     </mat-card-content>
