--- a/src/app/training/new-training/new-training.component.html
+++ b/src/app/training/new-training/new-training.component.html
@@ -1,22 +1,24 @@
 <section class="new-training" fxLayout fxLayoutAlign="center">
-  <mat-card class="example-card" fxFlex="400px" fxFlex.xs="100%">
-    <mat-card-header fxLayoutAlign="center">
-      <mat-card-title>Let's start to workout</mat-card-title>
-    </mat-card-header>
-    <mat-card-content fxLayoutAlign="center">
-      <mat-form-field>
-        <mat-label>Select</mat-label>
-        <mat-select>
-          <mat-option *ngFor="let x of exercises" value="{{ x.id }}">{{
-            x.name
-          }}</mat-option>
-        </mat-select>
-      </mat-form-field>
-    </mat-card-content>
-    <mat-card-actions fxLayoutAlign="center">
-      <button mat-raised-button color="accent" (click)="startTraining()">
-        Start
-      </button>
-    </mat-card-actions>
-  </mat-card>
+  <form #f="ngForm" (ngSubmit)="startTraining(f)">
+    <mat-card class="example-card" fxFlex="400px" fxFlex.xs="100%">
+      <mat-card-header fxLayoutAlign="center">
+        <mat-card-title>Let's start to workout</mat-card-title>
+      </mat-card-header>
+      <mat-card-content fxLayoutAlign="center">
+        <mat-form-field>
+          <mat-label>Select Exercise</mat-label>
+          <mat-select ngModel name="exercise" required>
+            <mat-option *ngFor="let x of exercises" value="{{ x.id }}">{{
+              x.name
+            }}</mat-option>
+          </mat-select>
+        </mat-form-field>
+      </mat-card-content>
+      <mat-card-actions fxLayoutAlign="center">
+        <button mat-raised-button color="accent" [disabled]="f.invalid">
+          Start
+        </button>
+      </mat-card-actions>
+    </mat-card>
+  </form>
 </section>
