--- a/src/app/training/training.component.html
+++ b/src/app/training/training.component.html
@@ -1,8 +1,6 @@
 <mat-tab-group *ngIf="!showCurrentTrainings">
   <mat-tab label="New Exercise">
-    <app-new-training
-      (trainingStart)="showCurrentTrainings = true"
-    ></app-new-training>
+    <app-new-training></app-new-training>
   </mat-tab>
   <mat-tab label="Past Exercise">
     <app-past-training></app-past-training>
