--- a/src/app/training/new-training/new-training.component.html
+++ b/src/app/training/new-training/new-training.component.html
@@ -5,7 +5,7 @@
         <mat-card-title>Let's start to workout</mat-card-title>
       </mat-card-header>
       <mat-card-content fxLayoutAlign="center">
-        <mat-form-field>
+        <mat-form-field *ngIf="!isLoadingIconNewTraining && exercises">
           <mat-label>Select Exercise</mat-label>
           <mat-select ngModel name="exercise" required>
             <mat-option *ngFor="let x of exercises" [value]="x.id">{{
@@ -14,9 +14,30 @@
           </mat-select>
         </mat-form-field>
       </mat-card-content>
-      <mat-card-actions fxLayoutAlign="center">
-        <button mat-raised-button color="accent" [disabled]="f.invalid">
+      <mat-spinner
+        style="margin: 0 auto"
+        *ngIf="isLoadingIconNewTraining"
+        diameter="50"
+      ></mat-spinner>
+      <mat-card-actions
+        *ngIf="!isLoadingIconNewTraining"
+        fxLayoutAlign="center"
+      >
+        <button
+          *ngIf="exercises"
+          mat-raised-button
+          color="accent"
+          [disabled]="f.invalid"
+        >
           Start
+        </button>
+        <button
+          *ngIf="!exercises"
+          (click)="fetchExercises()"
+          mat-raised-button
+          color="accent"
+        >
+          Retry connection
         </button>
       </mat-card-actions>
     </mat-card>
